data/derived/comb/progs/unify/prog0696.ml.out
Characters 59-88:
  | h::t -> append (listReverse t :: [h]);;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list -> 'a list list
       but an expression was expected of type 'a list
